# nano_bfm

./: .gitignore  CMakeLists.txt  README.md  bfm.cpp  bfm.h  glslNormalExample.cpp  main.cpp
scripts/: data_transform.py
